// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttonのレンダリングテスト primaryのレンダリングテスト 1`] = `
<div>
  <a
    class="block w-fit rounded-[2.8125rem] px-5 py-2 text-base font-normal text-white after:block after:h-[1px]
      after:w-full after:scale-0 after:transition-all hover:after:scale-100 hover:after:bg-white
      hover:after:content-[""] md:px-10 md:py-4 md:text-2xl
      bg-primary false"
    href="/difficulty"
  >
    Let's Play!
  </a>
</div>
`;

exports[`Buttonのレンダリングテスト secondaryのレンダリングテスト 1`] = `
<div>
  <a
    class="block w-fit rounded-[2.8125rem] px-5 py-2 text-base font-normal text-white after:block after:h-[1px]
      after:w-full after:scale-0 after:transition-all hover:after:scale-100 hover:after:bg-white
      hover:after:content-[""] md:px-10 md:py-4 md:text-2xl
      false border border-white"
    href="/howto"
  >
    How to use
  </a>
</div>
`;
